# BartaSceneCreator

./: .gitignore  Bartascenecreator.cpp  Bartascenecreator.h  CMakeLists.txt  bartascenecreator.ui  env.cmake.dist  main.cpp  resources.qrc
include/: CMakeLists.txt  HashFieldConcept.h  HashVector.h  pch.h
include/CustomWidgets/: CMakeLists.txt  ColorInputWidget.h  FloatInputWidget.h  HashInputWidget.h  IntegerInputWidget.h  JsonStackElement.h  MatrixWidget.h  SelectWidget.h  TextInputWidget.h
include/QtComponents/: DialogRepository.h  PageEnum.h
include/QtComponents/Form/: EyeForm.h  FormInterface.h  NullForm.h  ObjectForm.h
include/QtComponents/Form/Camera/: CenterForm.h  EyeForm.h  UpForm.h
include/QtComponents/Form/Object/: HitboxForm.h  MassCenterForm.h  RotationForm.h  SpriteForm.h  TransformationForm.h  VelocityForm.h
include/QtComponents/Form/Object/Hitbox/: CenterForm.h
include/QtComponents/Form/Object/Sprite/: CenterForm.h  ColorForm.h  OriginForm.h  SizeForm.h  Vertex1Form.h  Vertex2Form.h  Vertex3Form.h
include/QtComponents/StackElement/: JsonStackElement.h
include/Scene/: SceneDocument.h
include/Scene/Model/: Camera.h  Color.h  DynamicsData.h  Hitbox.h  Object.h  Rotation.h  Scene.h  Sprite.h  Transformation.h  Vector3.h
src/: CMakeLists.txt  HashVector.cpp
src/CustomWidgets/: CMakeLists.txt  ColorInputWidget.cpp  FloatInputWidget.cpp  HashInputWidget.cpp  IntegerWidget.cpp  MatrixWidget.cpp  SelectWidget.cpp  TextInputWidget.cpp
src/QtComponents/: CMakeLists.txt  DialogRepository.cpp
src/QtComponents/Form/: CMakeLists.txt  EyeForm.cpp  ObjectForm.cpp
src/QtComponents/Form/Camera/: CMakeLists.txt  CenterForm.cpp  EyeForm.cpp  UpForm.cpp
src/QtComponents/Form/Object/: CMakeLists.txt  HitboxForm.cpp  MassCenterForm.cpp  RotationForm.cpp  SpriteForm.cpp  TransformationForm.cpp  VelocityForm.cpp
src/QtComponents/Form/Object/Hitbox/: CMakeLists.txt  CenterForm.cpp
src/QtComponents/Form/Object/Sprite/: CMakeLists.txt  CenterForm.cpp  ColorForm.cpp  OriginForm.cpp  SizeForm.cpp  Vertex1Form.cpp  Vertex2Form.cpp  Vertex3Form.cpp
src/QtComponents/StackElement/: CMakeLists.txt  JsonStackElement.cpp
src/Scene/: CMakeLists.txt  SceneDocument.cpp
src/Scene/Model/: CMakeLists.txt  Camera.cpp  Object.cpp  Scene.cpp  Vector3.cpp
